# rllm

./: .env.example  .gitignore  .gitmodules  PR_dev_multiturn.md  README.md  RENDERER_MERGE_PLAN.md  debug_swe_minimal.py  debug_swe_single_instance-CN.py  mkdocs.yml  pyproject.toml  setup-and-debug.sh  setup.py  swe-eval.sh  swe-setup.sh  swe-train-rl.sh  swe-train-sft.sh  tb-results.txt  train_agentic_swe_llm-small.sh  train_agentic_swe_llm.sh
cookbooks/agent_frameworks/: README.md  evaluator.py  pyproject.toml  system_prompt.py  test.py  train.py  train_fireworks.sh  train_tinker.sh  train_verl.sh
cookbooks/agent_frameworks/agentflow/: _calculator.py  langgraph.py  openai_agents.py  smolagents.py  strands.py
cookbooks/deepcoder/: README.md  deepcoder_eval.py  deepcoder_flow.py  prepare_data.py  prepare_deepcoder_data.py  pyproject.toml  test.py  train.py  train_fireworks.sh  train_tinker.sh  train_verl.sh
cookbooks/finqa/: README.md  finqa_constants.py  finqa_eval.py  finqa_flow.py  finqa_tools.py  prepare_data.py  prepare_finqa_data.py  pyproject.toml  test.py  train.py  train_fireworks.sh  train_tinker.sh  train_verl.sh
cookbooks/frozenlake/: README.md  frozenlake_eval.py  frozenlake_flow.py  prepare_data.py  prepare_frozenlake_data.py  pyproject.toml  test.py  train.py  train_fireworks.sh  train_tinker.sh  train_verl.sh
cookbooks/langgraph_math/: README.md  evaluator.py  langgraph_math.py  pyproject.toml  test.py  train.py  train_tinker.sh  train_verl.sh
cookbooks/math/: README.md  math_eval.py  math_flow.py  pyproject.toml  test.py  train.py  train_fireworks.sh  train_tinker.sh  train_verl.sh
cookbooks/math_tool_agent/: README.md  evaluator.py  math_tool_agent.py  pyproject.toml  test.py  train.py  train_fireworks.sh  train_tinker.sh  train_verl.sh  train_workflow.py  train_workflow_verl.sh  workflow.py
cookbooks/solver_judge_flow/: README.md  evaluator.py  pyproject.toml  solver_judge_flow.py  test.py  train.py  train.sh  train_fireworks.sh  train_tinker.sh  train_verl.sh
cookbooks/swe/: README.md  data.py  environment.py  eval.py  evaluator.py  openai_model.py  prepare_tinker_data.py  pyproject.toml  swe_agent_flow.py  swebench_pro.yaml  tinker_unified.yaml  train.py  train.sh
cookbooks/swe-rl/: README.md  prepare_data.py  pyproject.toml  test.py  train.py  train_fireworks.sh  train_fireworks_sync.sh  train_tinker.sh  train_tinker_sync.sh  train_verl.sh
cookbooks/swe/docs/: STATUS.md
cookbooks/swe/launchers/: arnold_entrypoint_swe_qwen35_9b_megatron.sh  arnold_entrypoint_swe_qwen36_35b_a3b_megatron.sh  launch_external_cpu_driver_swe_qwen35_9b_megatron.sh  launch_external_cpu_driver_swe_qwen36_35b_a3b_megatron.sh  launch_swe_qwen35_9b_megatron_b200.yaml  launch_swe_qwen35_9b_megatron_b200_external_driver.yaml  launch_swe_qwen35_9b_megatron_b200_external_ray_workers.yaml  launch_swe_qwen36_35b_a3b_megatron_b200.yaml  launch_swe_qwen36_35b_a3b_megatron_b200_external_driver.yaml  launch_swe_qwen36_35b_a3b_megatron_b200_external_ray_workers.yaml  ray_runtime_env_swe.yaml  swe_artifact_utils.sh  swe_ray_python.sh
cookbooks/swe/patches/: __init__.py  swerex_modal_minimal.py  swerex_remote_retry.py
cookbooks/swe/scripts/: setup_verl_vllm018_qwen35.sh
cookbooks/swe/swe/: __init__.py  agent_flow.py  environment.py  evaluator.py  flow_config.py  openai_model.py  prepare_data.py  prepare_filtered_mix.py  prepare_rllm_data.py  prepare_swe_smith_rebenchv2_mix.py  utils.py
cookbooks/swe/tasks/: __init__.py  common.py  swebench_multilingual.py  swebench_pro.py  swesmith.py
cookbooks/swe/tests/: test_compaction.py  test_openai_model.py  test_swe_modal_integration.py  test_swe_task_common.py  test_swerex_remote_retry.py  test_trajectory_saving.py
cookbooks/terminal-rl/: README.md  prepare_data.py  pyproject.toml  test.py  train.py  train_fireworks.sh  train_fireworks_sync.sh  train_tinker.sh  train_tinker_sync.sh  train_verl.sh
cookbooks/tmax/: README.md  prepare_data.py  pyproject.toml  sanity.py  test.py  tmax_train_task_ids.txt  train.py  train_fireworks.sh  train_tinker.sh  train_verl.sh
tbmf/alfworld/: README.md  alfworld_flow.py  alfworld_prompt.py  alfworld_ray_env.py  alfworld_step_flow.py  prepare_alfworld_data.py  pyproject.toml  test.py  train.py  train_step.py  train_tinker.sh  train_verl.sh
tbmf/alfworld/alfworld_pkg/: __init__.py  info.py  utils.py
tbmf/alfworld/eval/: __init__.py  alfworld_eval.py  alfworld_lamer_eval.py
tbmf/alfworld/flow/: __init__.py  alfworld_flow.py  alfworld_lamer_flow.py  alfworld_step_flow.py
tbmf/alfworld/train/: train.py  train_grpo.py  train_lamer.py  train_step.py  train_verl.sh
tbmf/minisweeper/: README.md  minisweeper_flow.py  minisweeper_lamer_flow.py  minisweeper_prompt.py  minisweeper_step_flow.py  prepare_minisweeper_data.py  pyproject.toml  test.py  train.py  train_lamer.py  train_step.py  train_verl.sh
tbmf/minisweeper/eval/: __init__.py  minisweeper_eval.py  minisweeper_lamer_eval.py
tbmf/minisweeper/flow/: __init__.py  minisweeper_flow.py  minisweeper_lamer_flow.py  minisweeper_step_flow.py
tbmf/minisweeper/minisweeper_pkg/: __init__.py
tbmf/minisweeper/train/: train.py  train_grpo.py  train_lamer.py  train_step.py  train_tinker.sh
tbmf/sokoban/: README.md  prepare_sokoban_data.py  pyproject.toml  sokoban_flow.py  sokoban_lamer_flow.py  sokoban_prompt.py  sokoban_step_flow.py  test.py  train.py  train_lamer.py  train_step.py  train_tinker.sh  train_verl.sh
tbmf/sokoban/eval/: __init__.py  sokoban_eval.py  sokoban_lamer_eval.py
tbmf/sokoban/flow/: __init__.py  sokoban_flow.py  sokoban_lamer_flow.py  sokoban_step_flow.py
tbmf/sokoban/sokoban_pkg/: __init__.py  base.py  env.py  room_utils.py  utils.py
tbmf/sokoban/train/: __main__.py  train.py  train_grpo.py  train_lamer.py  train_sokoban_step.sh  train_step.py
tbmf/webshop/: README.md  prepare_webshop_data.py  pyproject.toml  test.py  train.py  train_step.py  webshop_env.py  webshop_eval.py  webshop_flow.py  webshop_lamer_eval.py  webshop_lamer_flow.py  webshop_prompt.py  webshop_step_flow.py
tbmf/webshop/train/: train.py  (+4 more)
(+1600 files in other folders)
