[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "finqa-agent"
version = "0.1.0"
description = "Multi-turn financial-QA agent plugin for rLLM (AgentFlow protocol)"
requires-python = ">=3.10"
dependencies = [
    "rllm",
    "openai",
    "pandas",
    "asteval>=1.0.6",
    "huggingface-hub",
]

[tool.setuptools]
# Top-level py-modules must be unique across installed cookbooks.
py-modules = ["finqa_flow", "finqa_eval", "finqa_tools", "finqa_constants", "prepare_data"]

[tool.setuptools.package-data]
"*" = ["prompts/*.txt"]

# Plugin discovery: `rllm` CLI finds these by name.
[project.entry-points."rllm.agents"]
finqa = "finqa_flow:finqa_flow"

[project.entry-points."rllm.evaluators"]
finqa = "finqa_eval:finqa_evaluator"
