[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "frozenlake-agent"
version = "0.1.0"
description = "Multi-turn FrozenLake agent plugin for rLLM (AgentFlow protocol)"
requires-python = ">=3.10"
dependencies = ["rllm", "openai", "gymnasium>=0.29", "numpy"]

[tool.setuptools]
# Top-level py-modules must be unique across installed cookbooks.
py-modules = ["frozenlake_flow", "frozenlake_eval", "prepare_frozenlake_data"]

# Plugin discovery: `rllm` CLI finds these by name.
[project.entry-points."rllm.agents"]
frozenlake = "frozenlake_flow:frozenlake_flow"

[project.entry-points."rllm.evaluators"]
frozenlake = "frozenlake_eval:frozenlake_evaluator"
