[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-math"
version = "0.1.0"
description = "LangGraph-authored math agent plugin for rLLM (AgentFlow protocol)"
requires-python = ">=3.10"
dependencies = [
    "rllm",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
]

[tool.setuptools]
py-modules = ["langgraph_math", "evaluator"]

# Plugin discovery: rllm CLI finds these by name
[project.entry-points."rllm.agents"]
langgraph_math = "langgraph_math:langgraph_math"

[project.entry-points."rllm.evaluators"]
langgraph_math = "evaluator:langgraph_math_evaluator"
