[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "solver-judge-flow"
version = "0.1.0"
description = "Solver-Judge multi-agent flow plugin for rLLM (countdown task)"
requires-python = ">=3.10"
dependencies = ["rllm", "openai"]

[tool.setuptools]
# Top-level py-modules must be unique across installed cookbooks.
py-modules = ["solver_judge_flow", "solver_judge_eval"]

# Plugin discovery: rllm CLI finds these by name
[project.entry-points."rllm.agents"]
solver_judge = "solver_judge_flow:solver_judge_flow"

[project.entry-points."rllm.evaluators"]
solver_judge_countdown = "solver_judge_eval:solver_judge_countdown_evaluator"
