[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-rl"
version = "0.1.0"
description = "End-to-end SWE-RL recipe: train on R2E-Gym, eval on SWE-bench Verified"
requires-python = ">=3.10"
dependencies = ["rllm"]

[tool.setuptools]
py-modules = ["prepare_data"]
