[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-rl"
version = "0.1.0"
description = "End-to-end terminal-agent RL recipe: train on local terminal tasks, eval on Terminal-Bench"
requires-python = ">=3.10"
dependencies = ["rllm"]

[tool.setuptools]
py-modules = ["prepare_data"]
