[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "webshop-agent"
version = "0.1.0"
description = "Multi-turn WebShop agent plugin for rLLM (AgentFlow protocol)"
requires-python = ">=3.10"
dependencies = ["rllm", "openai", "numpy", "ray", "gym", "beautifulsoup4", "flask", "torch"]

[tool.setuptools]
py-modules = ["webshop_prompt", "prepare_webshop_data", "webshop_env"]

[tool.setuptools.packages.find]
include = ["flow*", "eval*", "train*", "webshop_pkg*"]

[project.entry-points."rllm.agents"]
webshop = "flow.webshop_flow:webshop_flow"

[project.entry-points."rllm.evaluators"]
webshop = "eval.webshop_eval:webshop_evaluator"
